# meta_prov_fixer

./: .gitignore  README.md  meta_dumps.json  pyproject.toml
meta_prov_fixer/: dry_run_utils.py  fix_via_sparql.py  main.py  run_parallel_fix.py  src.py  update_db_from_issues.py  utils.py  virtuoso_watchdog.py
meta_prov_fixer/legacy/: README.md  fix_via_sparql.py  legacy_main.py  virtuoso_watchdog.py
old_data_to_fix_for_comparison/: FillerFixer.jsonl  MultiObjectFixer.jsonl  MultiPAFixer.jsonl
tests/: __init__.py  test_fix_via_sparql.py  test_src.py  test_utils.py
tests/data/: corrected_data.trig  data.trig  graph_filler_corrected.json  graph_with_filler.json
tests/data/corrected_dump/prov/: data.json
tests/data/fake_dump/prov/: data.json
tests/fixed/tests/data/fake_dump/prov/: data.json
