[tool.poetry]
name = "meta-prov-fixer"
version = "0.1.0"
description = ""
authors = ["eliarizzetto <elia.rizzetto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
tqdm = "^4.67.1"
tzdata = "^2025.2"
rdflib = "^7.1.4"
sparqlwrapper = "^2.0.0"
docker = "^7.1.0"
oc-ocdm = "^9.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
notebook = "^7.4.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
